--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,21 @@ default = []
 
 [dependencies]
 cfg-if = "1"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = {version = "0.2", features = ["js"]}
+js-sys = "0.3"
+serde = {version = "1", features = ["derive"]}
+serde-wasm-bindgen = "0.4"
+wasm-bindgen = "0.2"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 memmap2 = "0.5"
 
 [dev-dependencies]
 lazy_static = "1"
 rand = "0.8"
+wasm-bindgen-test = "0.3"
 
 [build-dependencies]
 rustc_version = "0.4"
