--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ default = []
 
 [dependencies]
 cfg-if = "1"
+ordered-float = "3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = {version = "0.2", features = ["js"]}
